<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>basic_launch</name>
  <version>0.0.0</version>
  <description>Examples of launch files</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>ros2launch</exec_depend>
  <!-- 실행할 패키지들에 대한 의존성도 추가하면 좋습니다 -->
  <exec_depend>basic_pub_sub</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
