<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>basic_param</name>
  <version>0.0.0</version>
  <description>Examples of ROS 2 parameters</description>
  <maintainer email="ubuntu@todo.todo">ubuntu</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <!-- rqt_reconfigure가 설치되어 있어야 실행 가능합니다 -->
  <exec_depend>rqt_reconfigure</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
